deployment/kubernetes/010-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hail-mary-frontend
  namespace: hail-mary
  labels:
    app: hail-mary-frontend
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: hail-mary-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hail-mary-frontend
  namespace: hail-mary
  labels:
    app: hail-mary-frontend
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hail-mary-frontend
  template:
    metadata:
      labels:
        app: hail-mary-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/misha-artemiev/hail-mary-com2020/hail-mary-com2020-frontend:1.6.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: hail-mary-backend
  namespace: hail-mary
  labels:
    app: hail-mary-backend
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: hail-mary-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hail-mary-backend
  namespace: hail-mary
  labels:
    app: hail-mary-backend
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hail-mary-backend
  template:
    metadata:
      labels:
        app: hail-mary-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/misha-artemiev/hail-mary-com2020/hail-mary-com2020-backend:1.6.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
