deployment/kubernetes/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: hail-mary
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: hail-mary
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:9.6
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
