deployment/kubernetes/008-optional-minio-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minio-route
  namespace: hail-mary
spec:
  parentRefs:
  - name: noxbound-gateway
    namespace: noxbound-edge
    sectionName: hail-mary-minio
  rules:
  - backendRefs:
    - name: hail-mary-minio
      port: 9000
