deployment/kubernetes/mysql-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mysql-route
  namespace: hail-mary
spec:
  parentRefs:
  - name: noxbound-gateway
    namespace: noxbound-edge
    sectionName: hail-mary-mysql
  rules:
  - backendRefs:
    - name: mysql-service
      port: 3306
